--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <!-- <meta name="viewport" content="width=device-width,initial-scale=1.0"> -->
 <!--    <link rel="icon" href="<%= BASE_URL %>favicon.ico">-->
 
-    <title>深圳市反诈技术支持平台</title>
+    <title>深圳市反诈技术支撑平台</title>
   
   </head>
   <body > 
